--- a/index.html
+++ b/index.html
@@ -1,23 +1,55 @@
 <!DOCTYPE html>
 <html>
   <head>
-   <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-green.min.css" />
-   <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-   <link rel="stylesheet" href="stylesheet.css">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-orange.min.css" />
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>To-Do App</title>
   </head>
   <body>
-    <h1>To-Do App</h1>
-    <form id="addToDoForm">
-      <label for="newToDoText">New To-Do:</label>
-      <input type="text" id="newToDoText">
-      <button type="submit">Add To-Do!</button>
-    </form>
+    <main class="mdl-layout__content mdl-grid">
+      <div class="mdl-cell mdl-cell--4-col mdl-cell--4-offset mdl-card mdl-shadow--4dp ">
+        <div class="mdl-cell mdl-cell--12-col">
+          <header class="mdl-layout__header">
+            <h1>To-Do App</h1>
+            </header>
+          <form id="addToDoForm">
+            <label for="newToDoText">New To-Do:</label>
+            <input type="text" id="newToDoText">
 
-    <ul id="toDoList">
-    </ul>
+            <button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+              <i class="material-icons">add</i>
+            </button>
+          </form>
 
-    <script src="app.js"></script>
+          <ul id="toDoList">
+          </ul>
+
+          <script src="app.js"></script>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
+
+<style>
+header {
+  text-align: center;
+}
+
+form {
+  text-align:center;
+  padding: 20px;
+}
+
+label {
+  font-weight: bold;
+  padding-right: 10px;
+}
+
+ul {
+  text-align: right;
+}
+</style
